feat(21): add products multiple create and validation pipes
